syntax = "proto3";

package grpcmetric;

option go_package = "github.com/h2p2f/practicum-metrics/proto";

message Metric {
  string type = 1;
  string name = 2;
  double gauge = 3;
  int64 counter = 4;
}

message UpdateMetricRequest {
  Metric metric = 1;
}

message UpdateMetricResponse {
  Metric metric = 1;
}

message UpdateMetricsRequest {
  repeated Metric metrics = 1;
}

message UpdateMetricsResponse {
}

service MetricsService {
  rpc UpdateMetric(UpdateMetricRequest) returns (UpdateMetricResponse);
  rpc UpdateMetrics(UpdateMetricsRequest) returns (UpdateMetricsResponse);
}